# DNS-Anomaly-Detector

./: README.md  pyproject.toml
DNS-Anomaly-Detector/dns_detector/: config.py  models.py
DNS-Anomaly-Detector/dns_detector/analysis/: entropy.py  ttl_analyzer.py
